# imu_configure

./: .gitignore  README.md  build.sh
ellipse-d-config/: CMakeLists.txt  main.c
ellipse-d-dashboard/: CMakeLists.txt  main.c
imu-serial-reader/: CMakeLists.txt  main.c
sbg-gui/: README.md  dashboard.py  run.sh
sbg-gui/bridge/: CMakeLists.txt  main.c
